<resources>
    <string name="app_name">AndroidAppDemo</string>
    <string name="value_animator_text">ValueAnimator属性动画</string>
    <string name="android_animation">android 1.0 动画</string>
    <string name="value_animator_of_float">ValueAnimator属性动画,使用小数动画次数</string>
    <string name="cancel">结束动画</string>
    <string name="value_animator_argb_evaluator">使用ArgbEvaluator改背景颜色</string>
    <string name="vale_animator_of_object">使用OfObject改变文字内容动画</string>
    <string name="of_object_view_pointView">自定义绘图动画</string>
    <string name="object_animator_property">使用Object_Animator改变动画属性</string>
    <string name="my_view_animation_object_paint">使用自定义的控件与属性来改变动画的执行</string>
    <string name="propertyvaluesholder">使用自定义的控件与propertyValuesHolder来改变动画的执行</string>
    <string name="evaluator">使用自定义的Evaluator来完成动画数据的转换</string>
    <string name="keyframe">使用Keyframe类完帧设置动画</string>
    <string name="animatorset">AnimatorSet</string>
    <string name="animatorset_playsequentially">使用顺序动画playSequentially</string>
    <string name="hellohanker">helloHanker</string>
    <string name="i_am_hanker">I\'am Hanker</string>
    <string name="playtogether">使用同时动画PlayTogether</string>
    <string name="buidler">使用Buidler指定动画执行顺序</string>
    <string name="xml_animator">使用XML展示动画</string>
    <string name="xml_value">使用XML展示连合动画</string>
    <string name="xml_obj">使用objAnimator开始动画</string>
    <string name="xml_set">使用Animator_Set演示动画</string>
    <string name="layout_animation_xml">使用LayoutAnimation展示子控件动画</string>
    <string name="draw_bezier">贝赛尔曲线(六)详解</string>
    <string name="wave">波浪动画效果</string>
    <string name="paint_function">使用Paint函数 线段路径效果</string>
    <string name="paint_function_two">使用Paint函数 离散路径效果</string>
    <string name="paint_function_three">使用Paint函数，印章效果</string>
    <string name="paint_merge">使用Paint函数，合并路径特效</string>
</resources>
