<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/android_animation"
            />

        <Button
            android:id="@+id/btn_value_animator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/value_animator_text"
            />
        <Button
            android:id="@+id/btn_value_animator_of_float"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/value_animator_of_float"/>
        <TextView
            android:id="@+id/btn_value_animator_argb_evaluator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/value_animator_argb_evaluator"/>
        <TextView
            android:id="@+id/btn_value_animator_of_object_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/vale_animator_of_object"/>
        <Button
            android:id="@+id/btn_value_animator_of_object_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/of_object_view_pointView"/>
        <Button
            android:id="@+id/cancel_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cancel"
            />
        <com.example.hank.myappdemo.mveiw.animation.draw.MyPointView
            android:id="@+id/point_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>
