<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Button
        android:id="@+id/alpha_scale_translate_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="alpha_scale_translate_rotate"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/view_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="view_animation"
        android:textSize="14sp"
        />
    <Button
        android:id="@+id/object_animator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="object_animator"
        android:textSize="14sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/set_animator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animatorset"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/container_animator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_animator"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/layout_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_animation_xml"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/layout_animation_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="使用layoutAnimation代码方式实现动画"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/gridlayout_animation_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="使用gridLayoutAnimationXMl方式实现动画"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/animate_layout_changes_layout_transition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="给ViewGroup的子控件在添加时显示动画"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/animate_layout_list_item_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="给ListView添加动画效果"
            android:textSize="14sp"
            />
    </LinearLayout>
</LinearLayout>